# ScreenTextReader

./: README.md  config.json  main.py  pyproject.toml
scripts/: test_ocr.py  test_tts.py
src/: __init__.py  capture.py  config_store.py  game_monitor.py  hotkey_handler.py  ocr.py  ocr_preprocess.py  reader_pipeline.py  region_selector.py  tts.py
src/gui/: __init__.py  app.py
